public class NullPerson extends Person {
    public NullPerson(){
        super("Unknown", "Unknown", 0, 0);
    }
}
